objects/Snapshot_Difference__c.object
<CustomObject>
    <fields>
        <fullName>Destination_Git_Commit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Git Commit</label>
        <referenceTo>Git_Org_Commit__c</referenceTo>
        <relationshipLabel>Snapshot Differences (Destination Git Commit)</relationshipLabel>
        <relationshipName>Snapshot_Differences1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination_Option__c</fullName>
        <label>Destination Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Git Commit</fullName>
                </value>
                <value>
                    <fullName>Salesforce Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destination_Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Org Credential</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Snapshot Differences (Destination Org Credential)</relationshipLabel>
        <relationshipName>Snapshot_Differences1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Run__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partial_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To calculate the differences only of selected files, select this checkbox.</inlineHelpText>
        <label>Partial Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Git_Commit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Git Commit</label>
        <referenceTo>Git_Org_Commit__c</referenceTo>
        <relationshipLabel>Snapshot Differences</relationshipLabel>
        <relationshipName>Snapshot_Differences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Option__c</fullName>
        <label>Source Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Git Commit</fullName>
                </value>
                <value>
                    <fullName>Salesforce Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Org Credential</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Snapshot Differences</relationshipLabel>
        <relationshipName>Snapshot_Differences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Snapshot Difference</label>
    <nameField>
        <label>Snapshot Difference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Differences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>